fix(modal): add dark mode variables

--- a/tegel/src/components/modal/modal-theme-vars.scss
+++ b/tegel/src/components/modal/modal-theme-vars.scss
@@ -1,5 +1,5 @@
 :root,
-html {
+.sdds-theme-light {
   --sdds-modal-backdrop: rgba(0 0 0 / 40%);
   --sdds-modal-bg: var(--sdds-white);
   --sdds-modal-text: var(--sdds-grey-958);
@@ -9,28 +9,12 @@ html {
   --sdds-modal-scrollbar-thumb: var(--sdds-grey-500);
 }
 
-:root,
-html {
-  .sdds-theme-light {
-    --sdds-modal-backdrop: rgba(0 0 0 / 40%);
-    --sdds-modal-bg: var(--sdds-white);
-    --sdds-modal-text: var(--sdds-grey-958);
-    --sdds-modal-icon: var(--sdds-black);
-    --sdds-modal-scrollbar: var(--sdds-grey-300);
-    --sdds-modal-scrollbar-track: var(--sdds-grey-300);
-    --sdds-modal-scrollbar-thumb: var(--sdds-grey-500);
-  }
-}
-
-:root,
-html {
-  .sdds-theme-dark {
-    --sdds-modal-backdrop: rgba(0 0 0 / 40%);
-    --sdds-modal-bg: var(--sdds-grey-900);
-    --sdds-modal-text: var(--sdds-white);
-    --sdds-modal-icon: var(--sdds-white);
-    --sdds-modal-scrollbar: var(--sdds-grey-300);
-    --sdds-modal-scrollbar-track: var(--sdds-grey-300);
-    --sdds-modal-scrollbar-thumb: var(--sdds-grey-500);
-  }
+.sdds-theme-dark {
+  --sdds-modal-backdrop: rgba(0 0 0 / 40%);
+  --sdds-modal-bg: var(--sdds-grey-900);
+  --sdds-modal-text: var(--sdds-grey-50);
+  --sdds-modal-icon: var(--sdds-white);
+  --sdds-modal-scrollbar: var(--sdds-grey-300);
+  --sdds-modal-scrollbar-track: var(--sdds-grey-300);
+  --sdds-modal-scrollbar-thumb: var(--sdds-grey-500);
 }
